# mc-dsp-wavelet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  requirements.txt  tidy.txt  wavelet.py
example/: CMakeLists.txt  fft.cpp  wavelet.cpp
lt/: CMakeLists.txt  bit.hpp  cassert.hpp  complex.hpp  dsp.hpp  filesystem.hpp  iterator.hpp  map.hpp  memory.hpp  numbers.hpp  optional.hpp  preprocessor.hpp  set.hpp  string_view.hpp  utility.hpp  vector.hpp
lt/container/: FlatMap.hpp  FlatSet.hpp  SmallVector.hpp  StaticVector.hpp
lt/core/: AudioFile.h
lt/dsp/: convolution.hpp  fft.hpp  wavelets.hpp
lt/dsp/convolution/: Convolution.cpp  Convolution.hpp  ConvolutionMethod.hpp  FFTConvolver.cpp  FFTConvolver.hpp  OverlapSave.hpp  OverlapSaveConvolver.cpp  OverlapSaveConvolver.hpp  convolute.hpp
lt/dsp/fft/: FFT.cpp  FFT.hpp  FFTBackend.hpp  FFTDirection.hpp  STFT.cpp  STFT.hpp  Window.hpp  WindowFunction.cpp  WindowFunction.hpp
lt/dsp/fft/backend/: KissFFT.hpp  PFFFT.hpp
lt/dsp/wavelets/: ComplexWaveletTransform.cpp  ComplexWaveletTransform.hpp  ContinuousWaveletTransform.cpp  ContinuousWaveletTransform.hpp  Convolution.cpp  Convolution.hpp  Denoise.cpp  Denoise.hpp  FFT.cpp  FFT.hpp  SignalExtension.hpp  Wavelet.cpp  Wavelet.hpp  WaveletPacketTransform.cpp  WaveletPacketTransform.hpp  WaveletTransform.cpp  WaveletTransform.hpp  WaveletTransform2D.cpp  WaveletTransform2D.hpp  WaveletTree.cpp  WaveletTree.hpp  common.cpp  common.hpp  cwtmath.cpp  cwtmath.h  wavefunc.cpp  wavefunc.h  wtmath.cpp  wtmath.h
lt/dsp/wavelets/filters/: coif.hpp  daubechies.hpp  h.hpp  meyer.hpp  sym.hpp  utility.cpp
lt/dsp/wavelets/transforms/: ComplexWaveletTransform.cpp  ComplexWaveletTransform.hpp  WaveletPacketTransform.cpp  WaveletPacketTransform.hpp  WaveletTransform.cpp  WaveletTransform.hpp  WaveletTransform2D.cpp  WaveletTransform2D.hpp  WaveletTree.cpp  WaveletTree.hpp  common.cpp  common.hpp
lt/stdx/: bit_P0476.hpp  bit_P0553.hpp  bit_P1956.hpp  data.hpp  empty.hpp  integer_compare.hpp  iterator_N4280.hpp  iterator_P1227.hpp  math_constants.hpp  numbers_P0631.hpp  size.hpp  ssize.hpp  utility_P0586.hpp
lt/testing/: test.cpp  test.hpp
src/: AudioFile.h  CMakeLists.txt  ComplexWaveletTransform.cpp  ConvolutionMethod.hpp  FFT.hpp  OverlapSaveConvolver.cpp  OverlapSaveConvolver.hpp  SignalExtension.hpp  Wavelet.cpp  Wavelet.hpp  WaveletPacketTransform.cpp  WaveletPacketTransform.hpp  WaveletTransform2D.hpp  WaveletTree.cpp  WaveletTree.hpp  conv.cpp  conv.h  cwt.cpp  cwt.h  cwtmath.cpp  cwtmath.h  denoise.cpp  hsfft.cpp  hsfft.h  overlap_save_convolver.cpp  overlap_save_convolver.hpp  real.cpp  real.h  span.hpp  waux.h  wauxlib.h  wavefilt.cpp  wavefilt.h  wavefunc.cpp  wavefunc.h  wavelets.hpp  wavelib.c  wavelib.cpp  wavelib.h  wtmath.cpp  (+1 more)
src/convolution/: OverlapSave.cpp
src/filters/: daubechies.hpp  db.hpp  h.hpp  sym.hpp
src/mc/: algorithm.hpp  bit.hpp  cassert.hpp  complex.hpp  convolution.hpp  fft.hpp  filesystem.hpp  span.hpp  wavelet.hpp
src/mc/algorithm/: abs_max.hpp  corrcoef.hpp  ipow2.hpp  median.hpp  spectral_correlation.cpp
src/mc/audio/: audio_file.hpp
src/mc/convolution/: convolute.test.cpp  convolution_method.hpp  fft_convolver.hpp  overlap_save_convolver.cpp  overlap_save_convolver.test.cpp
src/mc/core/: AudioFile.h  raise.hpp
src/mc/dsp/: algorithm.hpp  convolution.hpp  fft.hpp  wavelet.hpp  wavelets.hpp
src/mc/dsp/algorithm/: abs_max.cpp  abs_max.hpp  corrcoef.cpp  corrcoef.hpp  down_sample.hpp  index_of_peak.hpp  ipow2.hpp  mean.hpp  median.hpp  mode.hpp  relative_error.cpp  relative_error.hpp  resample.hpp  rms_error.cpp  rms_error.hpp  signal_extension.cpp  signal_extension.hpp  spectral_convolution.cpp  spectral_convolution.hpp  spectral_correlation.cpp  spectral_correlation.hpp  up_sample.hpp  up_sample_even.hpp
src/mc/dsp/convolution/: ConvolutionMethod.hpp  FFTConvolver.cpp  FFTConvolver.hpp  OverlapSaveConvolver.cpp  OverlapSaveConvolver.hpp  OverlapSaveConvolver.test.cpp  convolute.hpp  convolute.test.cpp  convolution_method.hpp  fft_convolver.cpp  fft_convolver.hpp  overlap_save_convolver.cpp  overlap_save_convolver.hpp  overlap_save_convolver.test.cpp
src/mc/dsp/fft/: FFT.cpp  FFT.hpp  FFT.test.cpp  FFTBackend.hpp  FFTDirection.hpp  STFT.hpp  Window.hpp  Window.test.cpp  WindowFunction.cpp  WindowFunction.hpp  fft.cpp  fft.hpp  (+3 more)
src/mc/fft/: algorithm.hpp  convolution.hpp  fft.cpp  fft.hpp  rfft.cpp  rfft.hpp  rfft.test.cpp  transform.hpp
src/mc/stdx/: bit_P0476.hpp  iterator_P1227.hpp  numbers_P0631.hpp  utility_P0586.hpp
src/mc/testing/: test.cpp  test.hpp
src/mc/wavelet/: algorithm.hpp  family.hpp  wavelet.cpp  wavelet.test.cpp
src/transforms/: ComplexWaveletTransform.hpp  WaveletTransform.cpp  WaveletTransform.hpp  WaveletTransform2D.cpp
src/wavelets/: Convolution.cpp  Convolution.hpp  Denoise.cpp  Denoise.hpp  FFT.cpp  FFT.hpp  Wavelet.cpp  cwt.cpp  cwt.h  cwtmath.cpp  cwtmath.h  hsfft.h  real.cpp  real.h  waux.h  wauxlib.h  wavefilt.cpp  wavefunc.cpp  wtmath.h
src/wavelets/filters/: meyer.hpp  utility.cpp  utility.hpp
src/wavelets/transforms/: ComplexWaveletTransform.cpp  ComplexWaveletTransform.hpp  WaveletPacketTransform.cpp  WaveletPacketTransform.hpp  WaveletTransform.cpp  WaveletTransform.hpp  WaveletTransform2D.cpp  WaveletTransform2D.hpp  WaveletTree.cpp  WaveletTree.hpp
test/: CMakeLists.txt  ConvolutionTest.cpp  DirectConvolverTest.cpp  FFTConvolverTest.cpp  FFTTest.cpp  OverlapSaveConvolverTest.cpp  OverlapSaveTest.cpp  StdHeadersTest.cpp  WindowTest.cpp  bpm_detector.cpp  cwttest.c  cwttest.cpp  denoisetest.c  denoisetest.cpp  dwpttest.cpp  dwt2test.c  dwt2test.cpp  dwt_reconstruction.cpp  dwttest.c  dwttest.cpp  helper.cpp  helper.hpp  modwt2test.c  modwt2test.cpp  modwtdenoisetest.c  modwtdenoisetest.cpp  modwttest.c  modwttest.cpp  readFileToVector.hpp  swt2test.c  swt2test.cpp  swt_reconstruction.cpp  swttest.c  swttest.cpp  testing.cpp  testing.hpp  tst_dwt.cpp  wtreetest.cpp
test/stdx/: CMakeLists.txt  bit_test.cpp
test/testData/: conv_xcorr_03.txt
(+169 files in other folders)
