add_library(${CMAKE_PROJECT_NAME})
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(${CMAKE_PROJECT_NAME}
    PUBLIC
        lt::Span
        Boost::headers
        Boost::container
        Boost::filesystem
        Boost::json
        FFTW3::fftw3f
        kissfft::kissfft
        pffft::pffft
        fmt::fmt
        lt::CompilerOptions
        lt::CompilerWarnings
        lt::CodeCoverage
)
target_sources(${CMAKE_PROJECT_NAME}
    PRIVATE
        "algorithm.hpp"
        "array.hpp"
        "bit.hpp"
        "cassert.hpp"
        "cfloat.hpp"
        "cmath.hpp"
        "complex.hpp"
        "cstddef.hpp"
        "cstdlib.hpp"
        "cstring.hpp"
        "filesystem.hpp"
        "format.hpp"
        "fstream.hpp"
        "functional.hpp"
        "iterator.hpp"
        "limits.hpp"
        "memory.hpp"
        "numbers.hpp"
        "numeric.hpp"
        "optional.hpp"
        "random.hpp"
        "span.hpp"
        "sstream.hpp"
        "string.hpp"
        "string_view.hpp"
        "type_traits.hpp"
        "unordered_map.hpp"
        "utility.hpp"
        "vector.hpp"

        "core/AudioFile.h"

        "dsp/convolution.hpp"
        "dsp/convolution/FFTConvolver.cpp"
        "dsp/convolution/FFTConvolver.hpp"
        "dsp/convolution/ConvolutionMethod.hpp"
        "dsp/convolution/OverlapSaveConvolver.cpp"
        "dsp/convolution/OverlapSaveConvolver.hpp"

        "dsp/fft.hpp"
        "dsp/fft/FFT.hpp"
        "dsp/fft/FFT.cpp"
        "dsp/fft/STFT.hpp"
        "dsp/fft/STFT.cpp"
        "dsp/fft/Window.hpp"
        "dsp/fft/WindowFunction.hpp"
        "dsp/fft/WindowFunction.cpp"

        "dsp/wavelets.hpp"
        "dsp/wavelets/common.cpp"
        "dsp/wavelets/common.hpp"
        "dsp/wavelets/ContinuousWaveletTransform.cpp"
        "dsp/wavelets/ContinuousWaveletTransform.hpp"
        "dsp/wavelets/Denoise.hpp"
        "dsp/wavelets/Denoise.cpp"
        "dsp/wavelets/SignalExtension.hpp"
        "dsp/wavelets/Wavelet.cpp"
        "dsp/wavelets/Wavelet.hpp"
        "dsp/wavelets/WaveletPacketTransform.cpp"
        "dsp/wavelets/WaveletPacketTransform.hpp"
        "dsp/wavelets/WaveletTransform2D.cpp"
        "dsp/wavelets/WaveletTransform2D.hpp"
        "dsp/wavelets/WaveletTransform.cpp"
        "dsp/wavelets/WaveletTransform.hpp"
        "dsp/wavelets/WaveletTree.cpp"
        "dsp/wavelets/WaveletTree.hpp"

        "dsp/wavelets/filters/coif.hpp"
        "dsp/wavelets/filters/daubechies.hpp"
        "dsp/wavelets/filters/h.hpp"
        "dsp/wavelets/filters/meyer.hpp"
        "dsp/wavelets/filters/sym.hpp"
)